# singularity

./: .gitignore  AGENTS.md  CHANGELOG.md  FLOW.md  IDENTITY.md  README.md  SOUL.md  USER.md  VISION.md  WORKSPACE.md  pyproject.toml
.core/: AGENTS.md  BOOTSTRAP.md  IDENTITY.md  SOUL.md  agent.yaml  install.json
.core/profiles/: owner.md
config/: IDENTITY.md
copilot-custom-prompts/: pulse-blink-checkpoints.md
docs/: ARCHITECTURE.md  README.md  api.md  architecture.md  artifact-social.md  changelog.md  configuration.md  contributing.md  csuite.md  deployment.md  getting-started.md  infrastructure.md  memory.md  nexus.md  overview.md  poa.md  security.md  tools-reference.md  vdb.md
docs/erp/: API.md  README.md
docs/landing/: index.html
erp/: Makefile  README.md  scanner.py
erp/backend/: .env.example  .gitignore  API.md  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json  tsconfig.json
erp/studio/: .env.example  QUICK_STATUS.md  README.md
scripts/: fresh_install.py  redeploy_guild.py  stress_test.py
singularity/: __init__.py  __main__.py  bus.py  config.py  runtime.py
singularity/atlas/: discovery.py  manager.py  topology.py
singularity/auditor/: analyzer.py  scanner.py
singularity/cli/: main.py  wizard.py
singularity/cortex/: __init__.py  agent.py  blink.py  context.py  engine.py
singularity/csuite/: coordinator.py  cthulu_ops.py  dispatch.py  executive.py  reports.py  roles.py  self_heal.py
singularity/immune/: health.py  vitals.py
tests/: test_deployer_live.py  test_e2e.py
tools/: copilot_proxy.py
(+141 files in other folders)
